--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KarlTech – Accueil</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <!-- En-tête -->
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech">
+    <img src="logo_karltech.png" alt="Logo KarlTech" />
     <div class="header-text">
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
@@ -28,34 +28,69 @@
   <!-- Contenu principal -->
   <main>
 
-    <!-- Slider “Pourquoi choisir KarlTech” -->
+    <!-- Slider “Pourquoi choisir KarlTech ?” -->
     <section id="why">
       <div class="why-slider">
+        <!-- Slide 1 -->
         <div class="why-slide active" data-index="0">
-          <p><strong>Service à domicile ou à distance</strong><br>
-          Nous nous adaptons à votre emploi du temps et à votre confort : dépannage sur place ou en ligne via AnyDesk, intervention rapide, données toujours chiffrées.</p>
+          <p>
+            <strong>Service à domicile ou à distance</strong><br>
+            Vous choisissez votre confort : nous envoyons un technicien chez vous  
+            ou intervenons à distance via AnyDesk.  
+            Chaque session en ligne est chiffrée, facturée au juste prix  
+            et nous suivons votre installation pas à pas.
+          </p>
         </div>
+        <!-- Slide 2 -->
         <div class="why-slide" data-index="1">
-          <p><strong>Disponibilité en soirée</strong><br>
-          Vous travaillez la journée ? Pas de souci ! Nos plages horaires s’étendent jusqu’à 21 h en semaine pour que votre PC ne vous freine plus.</p>
+          <p>
+            <strong>Disponibilité en soirée</strong><br>
+            Vous travaillez le jour ? Aucun problème.  
+            Nos plages horaires s’étendent jusqu’à 21 h en semaine  
+            pour que vous puissiez programmer vos dépannages  
+            sans perturber votre journée.
+          </p>
         </div>
+        <!-- Slide 3 -->
         <div class="why-slide" data-index="2">
-          <p><strong>Transparence totale</strong><br>
-          Devis clair et gratuit avant chaque intervention : aucun supplément caché, vous connaissez toujours le coût exact.</p>
+          <p>
+            <strong>Transparence totale</strong><br>
+            Avant chaque intervention, vous recevez un devis clair et gratuit.  
+            Aucun supplément caché, aucun frais surprise :  
+            vous savez exactement ce que vous paierez, par écrit, avant le dépannage.
+          </p>
         </div>
+        <!-- Slide 4 -->
         <div class="why-slide" data-index="3">
-          <p><strong>Conseils clairs et adaptés</strong><br>
-          Fini le jargon technique : nous expliquons chaque étape simplement pour vous donner les clés de votre système.</p>
+          <p>
+            <strong>Conseils clairs et adaptés</strong><br>
+            Fini le jargon : nous vulgarisons chaque étape  
+            pour que vous compreniez le fonctionnement de votre ordinateur.  
+            Prenez des décisions éclairées et conservez un système performant.
+          </p>
         </div>
+        <!-- Slide 5 -->
         <div class="why-slide" data-index="4">
-          <p><strong>Expérience concrète</strong><br>
-          Plus de 10 ans d’expertise en Windows, optimisation PC et matériel, pour des solutions efficaces et durables.</p>
+          <p>
+            <strong>Expérience concrète</strong><br>
+            Forts de plus de 10 ans de dépannage Windows,  
+            optimisation PC et montage de matériel,  
+            nous gérons tous les cas, des plus simples  
+            aux pannes les plus complexes.
+          </p>
         </div>
+        <!-- Slide 6 -->
         <div class="why-slide" data-index="5">
-          <p><strong>Flexibilité et proximité</strong><br>
-          Basés à Shawinigan, nous intervenons chez vous ou à distance, semaine ou fin de semaine, pour un suivi régulier.</p>
+          <p>
+            <strong>Flexibilité et proximité</strong><br>
+            Basés à Shawinigan, nous intervenons rapidement  
+            chez vous ou à distance, en semaine et le week-end.  
+            Un suivi régulier et un service humain au cœur de nos priorités.
+          </p>
         </div>
       </div>
+
+      <!-- Puces de navigation -->
       <ul class="why-nav">
         <li class="active" data-index="0"></li>
         <li data-index="1"></li>
@@ -69,21 +104,27 @@
     <!-- Services populaires -->
     <section id="servicesSection">
       <h2>Nos services populaires</h2>
+
       <h3>Formatage et réinstallation système</h3>
-      <p>Restauration propre de Windows, pilotes et mises à jour.</p>
+      <p>Effacement complet, réinstallation de Windows, pilotes et mises à jour pour redonner vie à votre PC.</p>
+
       <h3>Suppression de virus et sécurisation</h3>
-      <p>Nettoyage complet contre les malwares et optimisation.</p>
+      <p>Analyse approfondie, suppression des malwares et optimisation des performances pour un système sain.</p>
+
       <h3>Assistance à distance</h3>
-      <p>Prise en main rapide via AnyDesk, sans déplacement.</p>
+      <p>Intervention rapide via AnyDesk, sans déplacement : dépannage efficace et sécurisé en quelques clics.</p>
+
       <h3>Installation de pièces ou logiciels</h3>
-      <p>Ajout de RAM, SSD, logiciels Office, antivirus, etc.</p>
+      <p>Montage et configuration de RAM, SSD, carte graphique et logiciels essentiels (Office, antivirus, etc.).</p>
+
       <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
     </section>
 
     <!-- À propos -->
     <section id="aproposSection">
       <h2>À propos</h2>
-      <p>Équipe passionnée et expérimentée depuis 10 ans, KarlTech propose un service humain et rapide pour rendre votre expérience numérique fluide.</p>
+      <p>KarlTech, c’est une équipe passionnée de technologie et de dépannage depuis plus de 10 ans,  
+      dédiée à un service humain, rapide et transparent — pour particuliers et professionnels.</p>
     </section>
 
   </main>
@@ -94,7 +135,7 @@
     &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
 
-  <!-- Script du slider -->
+  <!-- Script du slider et défilement molette -->
   <script>
     (function(){
       const slides = document.querySelectorAll('.why-slide');
