--- a/index.html
+++ b/index.html
@@ -35,57 +35,60 @@
         <div class="why-slide active" data-index="0">
           <p>
             <strong>Service à domicile ou à distance</strong><br>
-            Vous choisissez votre confort : nous envoyons un technicien chez vous  
-            ou intervenons à distance via AnyDesk.  
-            Chaque session en ligne est chiffrée, facturée au juste prix  
-            et nous suivons votre installation pas à pas.
+            Que vous préfériez la présence d’un technicien chez vous pour un diagnostic précis,<br>
+            ou l’efficacité d’un dépannage en ligne via AnyDesk, nous nous adaptons à vos besoins.<br>
+            Chaque intervention à distance est entièrement sécurisée et chiffrée afin de protéger vos données.<br>
+            Nous offrons une assistance rapide, sans frais de déplacement excessifs, pour un support sur mesure.
           </p>
         </div>
         <!-- Slide 2 -->
         <div class="why-slide" data-index="1">
           <p>
             <strong>Disponibilité en soirée</strong><br>
-            Vous travaillez le jour ? Aucun problème.  
-            Nos plages horaires s’étendent jusqu’à 21 h en semaine  
-            pour que vous puissiez programmer vos dépannages  
-            sans perturber votre journée.
+            Nous comprenons que votre emploi du temps peut être chargé pendant la journée.<br>
+            C’est pourquoi nous proposons des créneaux jusqu’à 21 h en semaine,<br>
+            pour dépanner votre matériel une fois votre travail terminé.<br>
+            Cette flexibilité vous permet de planifier vos interventions sans perturber vos obligations professionnelles ou personnelles.
           </p>
         </div>
         <!-- Slide 3 -->
         <div class="why-slide" data-index="2">
           <p>
             <strong>Transparence totale</strong><br>
-            Avant chaque intervention, vous recevez un devis clair et gratuit.  
-            Aucun supplément caché, aucun frais surprise :  
-            vous savez exactement ce que vous paierez, par écrit, avant le dépannage.
+            Avant chaque intervention, vous recevez un devis détaillé et gratuit,<br>
+            listant précisément les prestations et leurs coûts.<br>
+            Aucun frais imprévu ni supplément caché : nous engageons notre parole sur le prix affiché.<br>
+            Vous conservez un contrôle total sur les dépenses, et tous les travaux sont validés par écrit.
           </p>
         </div>
         <!-- Slide 4 -->
         <div class="why-slide" data-index="3">
           <p>
             <strong>Conseils clairs et adaptés</strong><br>
-            Fini le jargon : nous vulgarisons chaque étape  
-            pour que vous compreniez le fonctionnement de votre ordinateur.  
-            Prenez des décisions éclairées et conservez un système performant.
+            Fini le jargon technique complexe : nous expliquons chaque étape de manière simple et pédagogique.<br>
+            Vous bénéficiez de recommandations personnalisées pour optimiser votre système et prévenir les problèmes.<br>
+            Nous prenons le temps de répondre à toutes vos questions et de vous former aux bonnes pratiques.<br>
+            Ainsi, vous repartez avec un ordinateur performant et des connaissances durables.
           </p>
         </div>
         <!-- Slide 5 -->
         <div class="why-slide" data-index="4">
           <p>
             <strong>Expérience concrète</strong><br>
-            Forts de plus de 10 ans de dépannage Windows,  
-            optimisation PC et montage de matériel,  
-            nous gérons tous les cas, des plus simples  
-            aux pannes les plus complexes.
+            Forts de plus de 10 ans de dépannage Windows, optimisation PC et montage de matériel,<br>
+            nous intervenons sur des milliers de machines, domestiques et professionnelles.<br>
+            Chaque intervention s’appuie sur des procédures éprouvées et des outils de diagnostic avancés.<br>
+            Vous bénéficiez d’un savoir-faire reconnu pour des solutions fiables et durables.
           </p>
         </div>
         <!-- Slide 6 -->
         <div class="why-slide" data-index="5">
           <p>
             <strong>Flexibilité et proximité</strong><br>
-            Basés à Shawinigan, nous intervenons rapidement  
-            chez vous ou à distance, en semaine et le week-end.  
-            Un suivi régulier et un service humain au cœur de nos priorités.
+            Implantés à Shawinigan, nous couvrons toute la région et ses environs pour une réponse rapide.<br>
+            Nous proposons des rendez-vous en semaine, en soirée et le week-end pour vos urgences.<br>
+            Un suivi attentif post-intervention vous assure la pérennité de nos solutions.<br>
+            KarlTech, c’est la tranquillité d’esprit à portée de clic.
           </p>
         </div>
       </div>
@@ -106,16 +109,16 @@
       <h2>Nos services populaires</h2>
 
       <h3>Formatage et réinstallation système</h3>
-      <p>Effacement complet, réinstallation de Windows, pilotes et mises à jour pour redonner vie à votre PC.</p>
+      <p>Restauration complète de Windows avec pilotes et mises à jour intégrés pour redonner vie à votre machine.</p>
 
       <h3>Suppression de virus et sécurisation</h3>
-      <p>Analyse approfondie, suppression des malwares et optimisation des performances pour un système sain.</p>
+      <p>Analyse approfondie, élimination des malwares et renforcement de la sécurité pour un système sain et performant.</p>
 
       <h3>Assistance à distance</h3>
-      <p>Intervention rapide via AnyDesk, sans déplacement : dépannage efficace et sécurisé en quelques clics.</p>
+      <p>Prise en main ultra-rapide via AnyDesk, sans déplacement : dépannage efficace en quelques clics.</p>
 
       <h3>Installation de pièces ou logiciels</h3>
-      <p>Montage et configuration de RAM, SSD, carte graphique et logiciels essentiels (Office, antivirus, etc.).</p>
+      <p>Montage et configuration de RAM, SSD, carte graphique, logiciels Office, antivirus et plus selon vos besoins.</p>
 
       <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
     </section>
@@ -123,8 +126,8 @@
     <!-- À propos -->
     <section id="aproposSection">
       <h2>À propos</h2>
-      <p>KarlTech, c’est une équipe passionnée de technologie et de dépannage depuis plus de 10 ans,  
-      dédiée à un service humain, rapide et transparent — pour particuliers et professionnels.</p>
+      <p>KarlTech , c’est une équipe passionnée de technologie et de dépannage depuis plus de 10 ans,<br>
+      dédiée à un service humain, rapide et transparent pour simplifier votre quotidien numérique.</p>
     </section>
 
   </main>
