--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -2,33 +2,25 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>KarlTech – Services et Tarifs</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nos services et tarifs - KarlTech</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- En-tête -->
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech">
-    <div>
+    <img src="logo-karltech.png" alt="Logo KarlTech">
+    <div class="header-text">
       <h1>KarlTech</h1>
-      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
+      <p>Services et tarifs</p>
     </div>
   </header>
-
-  <!-- Navigation -->
   <nav>
-    <a href="index.html">Accueil</a>
-    <a href="services_tarifs.html" class="active">Services et Tarifs</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
+    <a href="#servicesSection" class="active">Services</a>
+    <a href="#aproposSection">À propos</a>
   </nav>
-
-  <!-- Contenu principal -->
   <main>
     <section id="servicesSection">
       <h2>Nos services et tarifs</h2>
-
       <table>
         <thead>
           <tr>
@@ -75,14 +67,14 @@
           </tr>
         </tbody>
       </table>
-
-      <p><a href="index.html">&larr; Retour à l’accueil</a></p>
+    </section>
+    <section id="aproposSection">
+      <h2>À propos de KarlTech</h2>
+      <p>Votre partenaire de confiance pour tous vos besoins en support informatique.</p>
     </section>
   </main>
-
-  <!-- Pied de page -->
   <footer>
-    &copy; 2025 KarlTech. Tous droits réservés.
+    <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
