--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nos services et tarifs - KarlTech</title>
-  <link rel="stylesheet" href="styles.css">
+  <!-- Correction : lien vers le fichier CSS existant -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
