--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nos services et tarifs - KarlTech</title>
-  <!-- Correction : lien vers le fichier CSS existant -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="logo-karltech.png" alt="Logo KarlTech">
+    <img src="logo_karltech.png" alt="Logo KarlTech">
     <div class="header-text">
       <h1>KarlTech</h1>
       <p>Services et tarifs</p>
     </div>
   </header>
   <nav>
-    <a href="#servicesSection" class="active">Services</a>
-    <a href="#aproposSection">À propos</a>
+    <a href="index.html">Accueil</a>
+    <a href="services_tarifs.html" class="active">Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="faq.html">FAQ</a>
+    <a href="apropos.html">À propos</a>
   </nav>
   <main>
     <section id="servicesSection">
@@ -68,6 +70,10 @@
           </tr>
         </tbody>
       </table>
+    </section>
+    <section id="aproposSection">
+      <h2>À propos de KarlTech</h2>
+      <p>Votre partenaire de confiance pour tous vos besoins en support informatique.</p>
     </section>
   </main>
   <footer>
