--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -14,12 +14,13 @@
       <p>Services et tarifs</p>
     </div>
   </header>
-  <nav>
-    <a href="index.html">Accueil</a>
-    <a href="services_tarifs.html" class="active">Services</a>
-    <a href="contact.html">Contact</a>
-    <a href="faq.html">FAQ</a>
-  </nav>
+  <nav class="main-nav">
+  <a href="index.html">Accueil</a>
+  <a href="services_tarifs.html" class="active">Services et Tarifs</a>
+  <a href="faq.html">FAQ</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
   <main>
     <section id="servicesSection">
       <h2>Nos services et tarifs</h2>
