--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   </header>
 
   <!-- Navigation -->
-  <nav>
+  <nav class="main-nav">
     <a href="index.html">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
     <a href="faq.html">FAQ</a>
