--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <!-- Navigation -->
   <nav class="main-nav">
-    <a href="index.html">Accueil</a>
-    <a href="services_tarifs.html" class="active">Services et Tarifs</a>
+    <a href="index.html" class="active">Accueil</a>
+    <a href="services_tarifs.html">Services et Tarifs</a>
     <a href="faq.html">FAQ</a>
     <a href="contact.html">Contact</a>
   </nav>
