--- a/faq.html
+++ b/faq.html
@@ -22,10 +22,10 @@
   <!-- ==================== -->
   <!-- Barre de navigation  -->
   <!-- ==================== -->
-  <nav>
+  <nav class="main-nav">
     <a href="index.html">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
-    <a href="faq.html" class="active">FAQ</a>
+    <a href="faq.html"  class="active">FAQ</a>
     <a href="contact.html">Contact</a>
   </nav>
 
