--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -7,20 +7,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- En-tête -->
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech">
+    <img src="logo_karltech.png" alt="Logo KarlTech" />
     <div class="header-text">
       <h1>KarlTech</h1>
-      <p>Services et tarifs</p>
+      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
     </div>
   </header>
-  <nav class="main-nav">
-  <a href="index.html">Accueil</a>
-  <a href="services_tarifs.html" class="active">Services et Tarifs</a>
-  <a href="faq.html">FAQ</a>
-  <a href="contact.html">Contact</a>
-</nav>
 
+  <!-- Navigation -->
+  <nav class="main-nav">
+    <a href="index.html">Accueil</a>
+    <a href="services_tarifs.html" class="active">Services et Tarifs</a>
+    <a href="faq.html">FAQ</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <!-- Contenu principal -->
   <main>
     <section id="servicesSection">
       <h2>Nos services et tarifs</h2>
@@ -72,8 +76,11 @@
       </table>
     </section>
   </main>
+
+  <!-- Pied de page -->
   <footer>
-    <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
+    &larr; <a href="index.html">Retour à l’accueil</a><br>
+    &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
 </body>
 </html>
