--- a/faq.html
+++ b/faq.html
@@ -1,38 +1,99 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAQ – KarlTech</title>
+  <title>KarlTech – FAQ</title>
+  <!-- Lien vers la feuille de style principale -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- En-tête -->
+  <!-- ==================== -->
+  <!-- En-tête du site     -->
+  <!-- ==================== -->
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech" />
-    <div class="header-text">
+    <img src="logo_karltech.png" alt="Logo KarlTech">
+    <div>
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
     </div>
   </header>
 
-  <!-- Navigation -->
+  <!-- ==================== -->
+  <!-- Barre de navigation  -->
+  <!-- ==================== -->
   <nav class="main-nav">
     <a href="index.html">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
-    <a href="faq.html" class="active">FAQ</a>
+    <a href="faq.html"  class="active">FAQ</a>
     <a href="contact.html">Contact</a>
   </nav>
 
-  <!-- Contenu principal -->
+  <!-- ==================== -->
+  <!-- Contenu principal    -->
+  <!-- ==================== -->
   <main>
-    <section id="faqSection">
-      <h2>Foire aux questions (FAQ)</h2>
-      <!-- Les questions-réponses seront ajoutées ici -->
+    <!-- ============================= -->
+    <!-- Section FAQ – Questions fréquentes -->
+    <!-- ============================= -->
+    <section id="faq">
+      <h2>FAQ – Questions Fréquentes</h2>
+
+      <!-- Conteneur des questions/réponses -->
+      <div class="faq-container">
+        <!-- Question 1 -->
+        <h3>Quels services proposez-vous ?</h3>
+        <p>
+          Nous offrons un large éventail d'interventions : formatage et réinstallation de Windows,  
+          suppression de virus, installation de pièces (RAM, SSD, carte graphique),  
+          custom builds, sauvegarde et récupération de données, assistance à distance,  
+          installation de logiciels (Office, antivirus), et bien plus encore.
+        </p>
+
+        <!-- Question 2 -->
+        <h3>Est-ce que vous vous déplacez ?</h3>
+        <p>
+          Oui, nous nous déplaçons dans Shawinigan et ses environs pour un petit frais supplémentaire.  
+          Pour les distances un peu plus longues, nous convenons ensemble du tarif au préalable.
+        </p>
+
+        <!-- Question 3 -->
+        <h3>Comment fonctionne le support à distance ?</h3>
+        <p>
+          Nous utilisons AnyDesk pour prendre la main sur votre ordinateur en toute sécurité.  
+          Chaque session est chiffrée et facturée au même tarif qu’une intervention sur place.
+        </p>
+
+        <!-- Question 4 -->
+        <h3>Combien de temps prend un formatage complet ?</h3>
+        <p>
+          Cela dépend du matériel et de la quantité de données :  
+          comptez généralement entre 1 h et 2 h pour une machine standard,  
+          mises à jour et pilotes inclus.
+        </p>
+
+        <!-- Question 5 -->
+        <h3>Proposez-vous des sauvegardes avant toute intervention ?</h3>
+        <p>
+          Absolument : avant toute opération risquant d’effacer des données,  
+          nous effectuons une sauvegarde complète pour garantir la protection de vos fichiers.
+        </p>
+
+        <!-- Question 6 -->
+        <h3>Comment sont calculés vos tarifs pour un custom build ?</h3>
+        <p>
+          Vous pouvez nous fournir vos propres pièces ou nous demander un devis complet.  
+          Dans ce cas, nous sélectionnons le matériel selon votre budget et vos besoins,  
+          puis nous facturons au prix coûtant + main-d’œuvre.
+        </p>
+      </div>
     </section>
   </main>
 
-  <!-- Pied de page -->
+  <!-- ==================== -->
+  <!-- Pied de page         -->
+  <!-- ==================== -->
   <footer>
     &larr; <a href="index.html">Retour à l’accueil</a><br>
     &copy; 2025 KarlTech. Tous droits réservés.
