--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
   <!-- ==================== -->
   <header>
     <img src="logo_karltech.png" alt="Logo KarlTech">
-    <div>
+    <div class="header-text">
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
     </div>
