--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <!-- En-tête -->
   <header>
     <img src="logo_karltech.png" alt="Logo KarlTech">
-    <div>
+    <div class="header-text">
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
     </div>
