--- a/index.html
+++ b/index.html
@@ -1,308 +1,161 @@
-/* ====================================================
-   KarlTech – Variables Globales
-   ==================================================== */
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>KarlTech – Accueil</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- En-tête -->
+  <header>
+    <img src="logo_karltech.png" alt="Logo KarlTech" />
+    <div class="header-text">
+      <h1>KarlTech</h1>
+      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
+    </div>
+  </header>
 
-:root {
-  --primary-color: #66b2ff;  /* Couleur principale */
-  --secondary-color: #3399ff; /* Couleur secondaire */
-  --background-color: rgba(30, 30, 30, 0.85);
-  --text-color: #f0f0f0;      /* Couleur du texte */
-  --link-color: #66b2ff;      /* Couleur des liens */
-  --hover-link-color: #3399ff; /* Couleur des liens au survol */
-}
+  <!-- Navigation -->
+  <nav class="main-nav">
+    <a href="index.html" class="active">Accueil</a>
+    <a href="services_tarifs.html">Services et Tarifs</a>
+    <a href="faq.html">FAQ</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
-/* ====================================================
-   KarlTech – Styles globaux
-   ==================================================== */
+  <!-- Contenu principal -->
+  <main>
+    <!-- Slider “Pourquoi choisir KarlTech ?” -->
+    <section id="why">
+      <div class="why-slider">
+        <!-- Slide 1 -->
+        <div class="why-slide active" data-index="0">
+          <p>
+            <strong>Service à domicile ou à distance</strong><br>
+            Que vous préfériez la présence d’un technicien chez vous pour un diagnostic précis,<br>
+            ou l’efficacité d’un dépannage en ligne via AnyDesk, nous nous adaptons à vos besoins.<br>
+            Chaque intervention à distance est entièrement sécurisée et chiffrée afin de protéger vos données.<br>
+            Nous offrons une assistance rapide, sans frais de déplacement excessifs, pour un support sur mesure.
+          </p>
+        </div>
+        <!-- Slide 2 -->
+        <div class="why-slide" data-index="1">
+          <p>
+            <strong>Disponibilité en soirée</strong><br>
+            Nous comprenons que votre emploi du temps peut être chargé pendant la journée.<br>
+            C’est pourquoi nous proposons des créneaux jusqu’à 21 h en semaine,<br>
+            pour dépanner votre matériel une fois votre travail terminé.<br>
+            Cette flexibilité vous permet de planifier vos interventions sans perturber vos obligations professionnelles ou personnelles.
+          </p>
+        </div>
+        <!-- Slide 3 -->
+        <div class="why-slide" data-index="2">
+          <p>
+            <strong>Transparence totale</strong><br>
+            Avant chaque intervention, vous recevez un devis détaillé et gratuit,<br>
+            listant précisément les prestations et leurs coûts.<br>
+            Aucun frais imprévu ni supplément caché : nous engageons notre parole sur le prix affiché.<br>
+            Vous conservez un contrôle total sur les dépenses, et tous les travaux sont validés par écrit.
+          </p>
+        </div>
+        <!-- Slide 4 -->
+        <div class="why-slide" data-index="3">
+          <p>
+            <strong>Conseils clairs et adaptés</strong><br>
+            Fini le jargon technique complexe : nous expliquons chaque étape de manière simple et pédagogique.<br>
+            Vous bénéficiez de recommandations personnalisées pour optimiser votre système et prévenir les problèmes.<br>
+            Nous prenons le temps de répondre à toutes vos questions et de vous former aux bonnes pratiques.<br>
+            Ainsi, vous repartez avec un ordinateur performant et des connaissances durables.
+          </p>
+        </div>
+        <!-- Slide 5 -->
+        <div class="why-slide" data-index="4">
+          <p>
+            <strong>Expérience concrète</strong><br>
+            Forts de plus de 10 ans de dépannage Windows, optimisation PC et montage de matériel,<br>
+            nous intervenons sur des milliers de machines, domestiques et professionnelles.<br>
+            Chaque intervention s’appuie sur des procédures éprouvées et des outils de diagnostic avancés.<br>
+            Vous bénéficiez d’un savoir-faire reconnu pour des solutions fiables et durables.
+          </p>
+        </div>
+        <!-- Slide 6 -->
+        <div class="why-slide" data-index="5">
+          <p>
+            <strong>Flexibilité et proximité</strong><br>
+            Implantés à Shawinigan, nous couvrons toute la région et ses environs pour une réponse rapide.<br>
+            Nous proposons des rendez-vous en semaine, en soirée et le week-end pour vos urgences.<br>
+            Un suivi attentif post-intervention vous assure la pérennité de nos solutions.<br>
+            KarlTech, c’est la tranquillité d’esprit à portée de clic.
+          </p>
+        </div>
+      </div>
 
-/* ---------- Structure générale ---------- */
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: var(--text-color);
-  background: linear-gradient(var(--background-color), var(--background-color)), url('support-informatique.jpg') no-repeat center center fixed;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-}
+      <!-- Puces de navigation -->
+      <ul class="why-nav">
+        <li class="active" data-index="0"></li>
+        <li data-index="1"></li>
+        <li data-index="2"></li>
+        <li data-index="3"></li>
+        <li data-index="4"></li>
+        <li data-index="5"></li>
+      </ul>
+    </section>
 
-/* ---------- En-tête ---------- */
-header {
-  display: flex;
-  align-items: center;
-  padding: 20px;
-}
+    <!-- Services populaires -->
+    <section id="servicesSection">
+      <h2>Nos services populaires</h2>
 
-header img {
-  height: 100px;
-  margin-right: 20px;
-}
+      <h3>Formatage et réinstallation système</h3>
+      <p>Restauration complète de Windows avec pilotes et mises à jour intégrés pour redonner vie à votre machine.</p>
 
-.header-text h1 {
-  margin: 0;
-  font-size: 2em;
-}
+      <h3>Suppression de virus et sécurisation</h3>
+      <p>Analyse approfondie, élimination des malwares et renforcement de la sécurité pour un système sain et performant.</p>
 
-.header-text p {
-  margin: 0;
-  color: #ccc;
-}
+      <h3>Assistance à distance</h3>
+      <p>Prise en main ultra-rapide via AnyDesk, sans déplacement : dépannage efficace en quelques clics.</p>
 
-/* ---------- Navigation ---------- */
-nav.main-nav {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  padding: 15px 0;
-  font-weight: bold;
-}
+      <h3>Installation de pièces ou logiciels</h3>
+      <p>Montage et configuration de RAM, SSD, carte graphique, logiciels Office, antivirus et plus selon vos besoins.</p>
 
-nav.main-nav a {
-  color: white;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
+      <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
+    </section>
 
-nav.main-nav a:hover,
-nav.main-nav a.active {
-  text-decoration: underline;
-  color: var(--primary-color);
-}
+    <!-- À propos -->
+    <section id="aproposSection">
+      <h2>À propos</h2>
+      <p>KarlTech , c’est une équipe passionnée de technologie et de dépannage depuis plus de 10 ans,<br>
+      dédiée à un service humain, rapide et transparent pour simplifier votre quotidien numérique.</p>
+    </section>
 
-/* ---------- Main ---------- */
-main {
-  flex: 1;
-}
+  </main>
 
-/* ====================================================
-   Section Services & Tarifs
-   ==================================================== */
-#servicesSection {
-  padding: 40px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  <!-- Pied de page -->
+  <footer>
+    &larr; <a href="index.html">Retour à l’accueil</a><br>
+    &copy; 2025 KarlTech. Tous droits réservés.
+  </footer>
 
-#servicesSection h2 {
-  color: var(--primary-color);
-  margin-bottom: 20px;
-  text-align: center;
-  width: 100%;
-  font-size: 2rem;
-}
-
-#servicesSection table {
-  width: 80%;
-  margin: 0 auto;
-  border-collapse: collapse;
-}
-
-#servicesSection th,
-#servicesSection td {
-  border: 1px solid var(--primary-color);
-  padding: 8px;
-}
-
-#servicesSection th {
-  background: rgba(102, 178, 255, 0.2);
-}
-
-/* ====================================================
-   Section FAQ – Questions Fréquentes
-   ==================================================== */
-#faq {
-  padding: 40px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#faq h2 {
-  color: var(--primary-color);
-  text-align: center;  /* Centrer le titre de la page */
-  margin-bottom: 20px;
-  font-size: 2rem;
-}
-
-.faq-container {
-  max-width: 1000px;  /* Limiter la largeur du contenu */
-  width: 100%;
-  margin-top: 20px;
-}
-
-.faq-container h3 {
-  color: var(--primary-color);
-  font-size: 1.4rem;  /* Taille de police cohérente */
-  margin-bottom: 10px;  /* Espacement entre les questions */
-}
-
-.faq-container p {
-  font-size: 1rem;
-  line-height: 1.6;
-  color: #ccc;
-  margin-bottom: 20px;
-}
-
-/* ====================================================
-   Section Contact – Nous joindre
-   ==================================================== */
-#contact {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;  /* Centrer tout le contenu horizontalement */
-  padding: 40px 20px;
-}
-
-#contact h2 {
-  color: var(--primary-color);
-  margin-bottom: 20px;
-  text-align: center; /* Centrer le titre */
-  width: 100%;
-}
-
-#contact .contact-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;  /* Réduire l'écart entre les deux colonnes */
-  width: 100%;
-  max-width: 1000px; /* Limiter la largeur des colonnes */
-}
-
-#contact .col.infos,
-#contact .col.formu {
-  flex: 1;
-  max-width: 450px;  /* Limiter la largeur des colonnes pour réduire l'espace */
-  padding: 20px;
-}
-
-#contact .col.infos p,
-#contact .col.infos ul {
-  text-align: left;
-  margin-left: 0;
-  margin-bottom: 15px; /* Espacement uniforme */
-}
-
-#contact .col.infos ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-#contact .col.infos ul li {
-  margin-bottom: 5px;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-top: 20px;  /* Ajouter un peu d'espacement */
-}
-
-form input,
-form textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid var(--primary-color);
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  font-size: 1rem;
-}
-
-form button {
-  padding: 10px;
-  background-color: var(--primary-color);
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 1rem;
-  margin-top: 10px;
-}
-
-form button:hover {
-  background-color: var(--secondary-color);
-}
-
-/* ====================================================
-   Couleur des liens dans la page Contact
-   ==================================================== */
-#contact .col.infos a {
-  color: white;  /* Changer la couleur des liens en blanc */
-  text-decoration: none;  /* Enlever le soulignement */
-}
-
-#contact .col.infos a:hover {
-  text-decoration: underline;  /* Souligner le lien au survol */
-  color: var(--primary-color);  /* Ajouter une couleur de survol */
-}
-
-/* ====================================================
-   Pied de page
-   ==================================================== */
-footer {
-  text-align: center;
-  padding: 20px;
-  background: rgba(0,0,0,0.6);
-  font-size: 0.9rem;
-}
-
-footer a {
-  color: var(--primary-color);
-  text-decoration: none;
-}
-
-/* ====================================================
-   Responsive (max-width: 768px) - pour les appareils mobiles
-   ==================================================== */
-@media (max-width: 768px) {
-  header {
-    flex-direction: column;
-    text-align: center;
-  }
-  header img {
-    margin-bottom: 10px;
-  }
-  nav {
-    font-size: 0.9rem;
-  }
-  #faq {
-    padding: 20px 10px;
-  }
-
-  #faq h2 {
-    font-size: 1.5rem;
-  }
-
-  .faq-container h3 {
-    font-size: 1.2rem;
-  }
-
-  .faq-container p {
-    font-size: 1rem;
-  }
-
-  #servicesSection table {
-    width: 100%;
-    margin: 0 auto;
-  }
-
-  #contact .contact-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .col.infos, .col.formu {
-    max-width: 100%;
-    padding: 10px;
-  }
-
-  form {
-    margin-top: 20px;
-  }
-}
+  <!-- Script du slider et défilement molette -->
+  <script>
+    (function(){
+      const slides = document.querySelectorAll('.why-slide');
+      const dots   = document.querySelectorAll('.why-nav li');
+      let idx = 0;
+      function show(i) {
+        slides.forEach(s=>s.classList.remove('active'));
+        dots.forEach(d=>d.classList.remove('active'));
+        slides[i].classList.add('active');
+        dots[i].classList.add('active');
+        idx = i;
+      }
+      dots.forEach(d=> d.addEventListener('click', ()=> show(+d.dataset.index)));
+      document.getElementById('why').addEventListener('wheel', e=>{
+        e.preventDefault();
+        const dir = e.deltaY > 0 ? 1 : -1;
+        show((idx + dir + slides.length) % slides.length);
+      });
+    })();
+  </script>
+</body>
+</html>
