--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
 
     <!-- À propos -->
     <section id="aproposSection">
-      <h2>À propos</h2>
-      <p>KarlTech , c’est une équipe passionnée de technologie et de dépannage depuis plus de 10 ans,<br>
-      dédiée à un service humain, rapide et transparent pour simplifier votre quotidien numérique.</p>
+      <h2>À propos de KarlTech</h2>
+      <p>Chez **KarlTech**, nous sommes passionnés par l'informatique et le dépannage. Depuis plus de **5 ans**, notre équipe met son expertise à votre service pour vous offrir des solutions rapides, fiables et adaptées à vos besoins. Notre objectif : simplifier votre quotidien numérique, que vous soyez un particulier ou une entreprise.</p>
+      <p>Nous savons à quel point il est important d’avoir un système performant et sécurisé. C’est pourquoi nous nous engageons à offrir un service personnalisé, en prenant le temps de bien comprendre vos défis et en vous proposant des solutions claires et efficaces. Notre engagement envers la qualité et la transparence fait de nous un partenaire de confiance pour vos besoins en technologie.</p>
+      <p>Chez KarlTech, chaque mission est une occasion de prouver que la technologie peut être simple et accessible à tous. Grâce à des années d'expérience, nous avons développé une approche qui allie **conseils techniques éclairés**, **réactivité** et **service client irréprochable**. Nous ne nous contentons pas de réparer, nous formons et accompagnons nos clients, leur permettant de maîtriser et optimiser leur matériel avec sérénité.</p>
     </section>
 
   </main>
