--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
   <!-- Contenu principal -->
   <main>
     <!-- Slider “Pourquoi choisir KarlTech ?” -->
-    <section id="why">
-      <div class="why-slider">
+    <section id="why" style="position: relative; height: 60vh; width: 75%; margin: 0 auto; overflow: hidden; border-radius: 20px; border: 4px solid #66b2ff; background: none;">
+      <div class="why-slider" style="position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; text-align: center; padding: 5%;">
+
         <!-- Slide 1 -->
-        <div class="why-slide active" data-index="0">
-          <p>
+        <div class="why-slide active" data-index="0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; padding: 5%; opacity: 1; transform: translateY(0); transition: opacity 0.6s ease, transform 0.6s ease; border-radius: 16px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);">
+          <p style="font-size: 2rem; color: white; line-height: 1.5; padding: 10% 0; text-align: center;">
             <strong>Service à domicile ou à distance</strong><br>
             Que vous préfériez la présence d’un technicien chez vous pour un diagnostic précis,<br>
             ou l’efficacité d’un dépannage en ligne via AnyDesk, nous nous adaptons à vos besoins.<br>
@@ -40,8 +41,8 @@
           </p>
         </div>
         <!-- Slide 2 -->
-        <div class="why-slide" data-index="1">
-          <p>
+        <div class="why-slide" data-index="1" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; padding: 5%; opacity: 0; transform: translateY(20px); transition: opacity 0.6s ease, transform 0.6s ease; border-radius: 16px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);">
+          <p style="font-size: 2rem; color: white; line-height: 1.5; padding: 10% 0; text-align: center;">
             <strong>Disponibilité en soirée</strong><br>
             Nous comprenons que votre emploi du temps peut être chargé pendant la journée.<br>
             C’est pourquoi nous proposons des créneaux jusqu’à 21 h en semaine,<br>
@@ -50,8 +51,8 @@
           </p>
         </div>
         <!-- Slide 3 -->
-        <div class="why-slide" data-index="2">
-          <p>
+        <div class="why-slide" data-index="2" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; padding: 5%; opacity: 0; transform: translateY(20px); transition: opacity 0.6s ease, transform 0.6s ease; border-radius: 16px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);">
+          <p style="font-size: 2rem; color: white; line-height: 1.5; padding: 10% 0; text-align: center;">
             <strong>Transparence totale</strong><br>
             Avant chaque intervention, vous recevez un devis détaillé et gratuit,<br>
             listant précisément les prestations et leurs coûts.<br>
@@ -60,8 +61,8 @@
           </p>
         </div>
         <!-- Slide 4 -->
-        <div class="why-slide" data-index="3">
-          <p>
+        <div class="why-slide" data-index="3" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; padding: 5%; opacity: 0; transform: translateY(20px); transition: opacity 0.6s ease, transform 0.6s ease; border-radius: 16px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);">
+          <p style="font-size: 2rem; color: white; line-height: 1.5; padding: 10% 0; text-align: center;">
             <strong>Conseils clairs et adaptés</strong><br>
             Fini le jargon technique complexe : nous expliquons chaque étape de manière simple et pédagogique.<br>
             Vous bénéficiez de recommandations personnalisées pour optimiser votre système et prévenir les problèmes.<br>
@@ -70,8 +71,8 @@
           </p>
         </div>
         <!-- Slide 5 -->
-        <div class="why-slide" data-index="4">
-          <p>
+        <div class="why-slide" data-index="4" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; padding: 5%; opacity: 0; transform: translateY(20px); transition: opacity 0.6s ease, transform 0.6s ease; border-radius: 16px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);">
+          <p style="font-size: 2rem; color: white; line-height: 1.5; padding: 10% 0; text-align: center;">
             <strong>Expérience concrète</strong><br>
             Forts de plus de 10 ans de dépannage Windows, optimisation PC et montage de matériel,<br>
             nous intervenons sur des milliers de machines, domestiques et professionnelles.<br>
@@ -80,8 +81,8 @@
           </p>
         </div>
         <!-- Slide 6 -->
-        <div class="why-slide" data-index="5">
-          <p>
+        <div class="why-slide" data-index="5" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; padding: 5%; opacity: 0; transform: translateY(20px); transition: opacity 0.6s ease, transform 0.6s ease; border-radius: 16px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);">
+          <p style="font-size: 2rem; color: white; line-height: 1.5; padding: 10% 0; text-align: center;">
             <strong>Flexibilité et proximité</strong><br>
             Implantés à Shawinigan, nous couvrons toute la région et ses environs pour une réponse rapide.<br>
             Nous proposons des rendez-vous en semaine, en soirée et le week-end pour vos urgences.<br>
@@ -92,7 +93,7 @@
       </div>
 
       <!-- Puces de navigation -->
-      <ul class="why-nav">
+      <ul class="why-nav" style="position: absolute; top: 50%; right: 2%; transform: translateY(-50%); list-style: none; margin: 0; padding: 0;">
         <li class="active" data-index="0"></li>
         <li data-index="1"></li>
         <li data-index="2"></li>
@@ -102,7 +103,7 @@
       </ul>
     </section>
 
-    <!-- Services populaires -->
+    <!-- Nos services populaires -->
     <section id="servicesSection">
       <h2>Nos services populaires</h2>
 
