--- a/index.html
+++ b/index.html
@@ -69,11 +69,33 @@
             Ainsi, vous repartez avec un ordinateur performant et des connaissances durables.
           </p>
         </div>
+        <!-- Slide 5 -->
+        <div class="why-slide">
+          <p>
+            <strong>Expérience concrète</strong><br>
+            Forts de plus de 5 ans de dépannage Windows, optimisation PC et montage de matériel,<br>
+            nous intervenons sur des milliers de machines, domestiques et professionnelles.<br>
+            Chaque intervention s’appuie sur des procédures éprouvées et des outils de diagnostic avancés.<br>
+            Vous bénéficiez d’un savoir-faire reconnu pour des solutions fiables et durables.
+          </p>
+        </div>
+        <!-- Slide 6 -->
+        <div class="why-slide">
+          <p>
+            <strong>Flexibilité et proximité</strong><br>
+            Implantés à Shawinigan, nous couvrons toute la région et ses environs pour une réponse rapide.<br>
+            Nous proposons des rendez-vous en semaine, en soirée et le week-end pour vos urgences.<br>
+            Un suivi attentif post-intervention vous assure la pérennité de nos solutions.<br>
+            KarlTech, c’est la tranquillité d’esprit à portée de clic.
+          </p>
+        </div>
       </div>
 
       <!-- Puces de navigation -->
       <ul class="why-nav">
         <li class="active"></li>
+        <li></li>
+        <li></li>
         <li></li>
         <li></li>
         <li></li>
