--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
             KarlTech, c’est la tranquillité d’esprit à portée de clic.
           </p>
         </div>
+        <!-- Slide 7 - Impression 3D Personnalisée -->
+        <div class="why-slide">
+          <p>
+            <strong>Impression 3D Personnalisée</strong><br>
+            Découvrez notre service d'impression 3D pour des objets uniques, personnalisés selon vos spécifications. 
+            Nous utilisons des matériaux de haute qualité et offrons une large gamme de couleurs. 
+            Que vous souhaitiez imprimer des objets décoratifs ou des pièces fonctionnelles, nous pouvons le faire !
+          </p>
+        </div>
       </div>
 
       <!-- Puces de navigation -->
@@ -99,6 +108,7 @@
         <li></li>
         <li></li>
         <li></li>
+        <li></li> <!-- Nouvelle puce pour la slide Impression 3D -->
       </ul>
     </section>
 
@@ -116,17 +126,11 @@
 
       <h3>Installation de pièces ou logiciels</h3>
       <p>Montage et configuration de RAM, SSD, carte graphique, logiciels Office, antivirus et plus selon vos besoins.</p>
+
+      <h3>Impression 3D Personnalisée</h3>
+      <p>Impression d'objets personnalisés selon vos spécifications, dans divers matériaux et couleurs. Contactez-nous pour plus d'informations !</p>
+
     </section>
-
-<!-- À propos -->
-<section id="aproposSection">
-  <h2 class="section-title">À propos de KarlTech</h2>
-  <p>Chez KarlTech, nous sommes passionnés par l'informatique et le dépannage. Depuis plus de 5 ans, notre équipe met son expertise à votre service pour vous offrir des solutions rapides, fiables et adaptées à vos besoins. Notre objectif : simplifier votre quotidien numérique, que vous soyez un particulier ou une entreprise.</p>
-  <p>Nous savons à quel point il est important d’avoir un système performant et sécurisé. C’est pourquoi nous nous engageons à offrir un service personnalisé, en prenant le temps de bien comprendre vos défis et en vous proposant des solutions claires et efficaces. Notre engagement envers la qualité et la transparence fait de nous un partenaire de confiance pour vos besoins en technologie.</p>
-  <p>Chez KarlTech, chaque mission est une occasion de prouver que la technologie peut être simple et accessible à tous. Grâce à des années d'expérience, nous avons développé une approche qui allie conseils techniques éclairés, réactivité et service client irréprochable. Nous ne nous contentons pas de réparer, nous formons et accompagnons nos clients, leur permettant de maîtriser et optimiser leur matériel avec sérénité.</p>
-</section>
-
-
 
   </main>
 
@@ -137,7 +141,7 @@
   </footer>
 
   <!-- Script du slider -->
- <script>
+  <script>
     (function(){
       const slides = document.querySelectorAll('.why-slide');
       const dots   = document.querySelectorAll('.why-nav li');
