--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -72,6 +72,11 @@
             <td>À la demande du client : configuration, dépannage, formation, etc.</td>
             <td>Sur devis</td>
           </tr>
+          <tr>
+            <td>Impression 3D Personnalisée</td>
+            <td>Impression d'objets personnalisés selon vos spécifications. Que ce soit pour des objets décoratifs ou fonctionnels, nous nous chargeons de tout !</td>
+            <td>Sur devis</td>
+          </tr>
         </tbody>
       </table>
     </section>
