--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,9 @@
             <li>Lundi au vendredi : 17h à 21h</li>
             <li>Samedi et dimanche : 8h à 18h</li>
           </ul>
+
+          <!-- Lien vers Facebook -->
+          <p><strong>Facebook :</strong> <a href="https://www.facebook.com/profile.php?id=61577595262812" target="_blank">Cliquer ici</a></p>
         </div>
 
         <!-- Colonne formulaire -->
