--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -38,43 +38,58 @@
         </thead>
         <tbody>
           <tr>
-            <td>Formatage / Réinstallation de Windows</td>
-            <td>Installation propre de Windows avec pilotes et mises à jour</td>
+            <td>Formatage</td>
+            <td>Réinstallation complète de Windows avec pilotes</td>
             <td>60 $</td>
           </tr>
           <tr>
-            <td>Suppression de virus</td>
-            <td>Nettoyage complet du système avec optimisation</td>
-            <td>50 $</td>
-          </tr>
-          <tr>
-            <td>Assemblage sur mesure (custom PC)</td>
-            <td>Montage complet selon les pièces fournies ou sur devis</td>
-            <td>Sur devis</td>
-          </tr>
-          <tr>
-            <td>Installation de pièces</td>
-            <td>Ajout ou remplacement de RAM, SSD, carte graphique, etc.</td>
-            <td>40 $</td>
-          </tr>
-          <tr>
-            <td>Installation de logiciels</td>
-            <td>Installation de Microsoft Office, antivirus, ou autres applications</td>
+            <td>Installation de logiciel</td>
+            <td>Installation de programmes (Office, antivirus, etc.)</td>
             <td>30 $</td>
           </tr>
           <tr>
-            <td>Sauvegarde ou récupération de données</td>
-            <td>Clonage, sauvegarde externe ou tentative de récupération</td>
+            <td>Suppression de virus</td>
+            <td>Nettoyage de malwares et optimisation du système</td>
             <td>50 $</td>
           </tr>
           <tr>
-            <td>Autres services</td>
-            <td>À la demande du client : configuration, dépannage, formation, etc.</td>
+            <td>Installation de pièces</td>
+            <td>Ajout ou remplacement de composantes internes</td>
+            <td>40 $</td>
+          </tr>
+          <tr>
+            <td>Custom build</td>
+            <td>Assemblage complet d’un PC selon vos besoins</td>
             <td>Sur devis</td>
           </tr>
           <tr>
-            <td>Impression 3D Personnalisée</td>
-            <td>Impression d'objets personnalisés selon vos spécifications. Que ce soit pour des objets décoratifs ou fonctionnels, nous nous chargeons de tout !</td>
+            <td>Sauvegarde de données</td>
+            <td>Copie ou récupération de fichiers importants</td>
+            <td>50 $</td>
+          </tr>
+          <tr>
+            <td>Nettoyage PC</td>
+            <td>Nettoyage interne et amélioration des performances</td>
+            <td>40 $</td>
+          </tr>
+          <tr>
+            <td>Installation imprimante</td>
+            <td>Connexion et configuration d’imprimante locale ou réseau</td>
+            <td>30 $</td>
+          </tr>
+          <tr>
+            <td>Configuration réseau</td>
+            <td>Installation ou dépannage Wi-Fi / réseau filaire</td>
+            <td>Sur devis</td>
+          </tr>
+          <tr>
+            <td>Assistance à distance</td>
+            <td>Intervention via AnyDesk ou autre outil sécurisé</td>
+            <td>40 $</td>
+          </tr>
+          <tr>
+            <td>Autre service</td>
+            <td>Tout service hors liste : à discuter selon la demande</td>
             <td>Sur devis</td>
           </tr>
         </tbody>
