--- a/index.html
+++ b/index.html
@@ -150,30 +150,36 @@
 
   <!-- Script du slider -->
   <script>
-  (function(){
-    const slides = document.querySelectorAll('.why-slide');
-    const dots   = document.querySelectorAll('.why-nav li');
-    let idx = 0;
+(function(){
+  const slides = document.querySelectorAll('.why-slide');
+  const dots   = document.querySelectorAll('.why-nav li');
+  let idx = 0;
 
-    function show(i){
-      slides.forEach(s=>s.classList.remove('active'));
-      dots.forEach(d=>d.classList.remove('active'));
-      slides[i].classList.add('active');
-      dots[i].classList.add('active');
-      idx = i;
+  function show(i){
+    slides.forEach(s => s.classList.remove('active'));
+    dots.forEach(d => d.classList.remove('active'));
+    slides[i].classList.add('active');
+    dots[i].classList.add('active');
+    idx = i;
+  }
+
+  // Cliquer sur une bulle
+  dots.forEach((d, i) => {
+    d.addEventListener('click', () => show(i));
+  });
+
+  // Défilement souris / trackpad (desktop)
+  document.getElementById('why').addEventListener('wheel', e => {
+    if (window.innerWidth > 768) { // seulement desktop
+      e.preventDefault();
+      let next = (idx + (e.deltaY > 0 ? 1 : -1) + slides.length) % slides.length;
+      show(next);
     }
+  });
 
-    // ✅ Correction : utilise l’index du forEach
-    dots.forEach((d, i) => d.onclick = () => show(i));
-
-    document.getElementById('why')
-      .addEventListener('wheel', e=>{
-        e.preventDefault();
-        let next = (idx + (e.deltaY>0?1:-1) + slides.length) % slides.length;
-        show(next);
-      });
-  })();
+})();
 </script>
+
 
 </body>
 </html>
