--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>KarlTech – Accueil</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="index">
   <!-- En-tête -->
   <header>
     <img src="logo_karltech.png" alt="Logo KarlTech" />
